Sutter Health/src/objects/Contact_Validation_Audit_Trail__c.object
<CustomObject>
    <description>Custom Object for tracking Contact fields initial and final value.</description>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Change__c</fullName>
        <label>Address Change</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_Modified__c</fullName>
        <label>Address Modified</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Status__c</fullName>
        <label>Address Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_Unique_Identifier__c</fullName>
        <label>Address Unique Identifier</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Assistant_Email__c</fullName>
        <description>Used to capture provider assistant email</description>
        <label>Delegate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Admin_Assistant_Phone__c</fullName>
        <label>Delegate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Admin_Assistant_Title__c</fullName>
        <description>Used for provider delegated title.</description>
        <label>Delegate Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Assistant__c</fullName>
        <description>Used to capture admin assistant name</description>
        <label>Delegate Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attn_To__c</fullName>
        <label>Attn To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Board_Certifications__c</fullName>
        <label>Board Certifications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Provider Validation Updates</relationshipLabel>
        <relationshipName>Provider_Validation_Updates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Communication_Preferences_HIM__c</fullName>
        <label>Communication Preferences – HIM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Basket Message</fullName>
                </value>
                <value>
                    <fullName>In Basket Letter</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Printed Letter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Activities__c</fullName>
        <label>Community Activities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contact_Validation_Audit_Trails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deficiency_Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deficiency_Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delegate_Phone_Ext__c</fullName>
        <description>Used to capture delegate phone extension.</description>
        <label>Delegate Phone Ext</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Address__c</fullName>
        <label>Direct Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Provider&apos;s email address.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fellowship_Programs__c</fullName>
        <label>Fellowship Programs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Affiliations__c</fullName>
        <label>Hospital Affiliations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internship__c</fullName>
        <label>Internship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Affiliations__c</fullName>
        <label>Medical Affiliations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Education__c</fullName>
        <label>Medical Education</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <description>Provider&apos;s mobile phone number.</description>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Names_Changes_Suggested__c</fullName>
        <label>Names Changes Suggested</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Street_Address__c</fullName>
        <label>New Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ok_to_Text__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ok to Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ok_to_Text_f__c</fullName>
        <formula>IF(NOT(Ok_to_Text__c),&quot;No&quot;,&quot;Yes&quot;)</formula>
        <label>Ok to Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Services__c</fullName>
        <label>Online Services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDI_Campaign__c</fullName>
        <description>Used to indicate campaign name</description>
        <label>PDI Campaign</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Interests__c</fullName>
        <label>Personal Interests</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Philosophy_of_Care__c</fullName>
        <label>Philosophy of Care</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practicing_Physician__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate provider service active status</description>
        <label>Practicing Physician</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Communication_Method__c</fullName>
        <label>Communication Preferences – EHR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Basket</fullName>
                    <color>#0B6FCE</color>
                </value>
                <value>
                    <fullName>Fax</fullName>
                    <color>#78C953</color>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional_Ineterests__c</fullName>
        <label>Professional Ineterests</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Access_Type__c</fullName>
        <label>Provider Access Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Address_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Address</label>
        <referenceTo>Provider_Address__c</referenceTo>
        <relationshipLabel>Provider Validation Updates</relationshipLabel>
        <relationshipName>Provider_Validation_Updates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provider_ID__c</fullName>
        <description>ID of the Provider whose record was modified (need to confirm SFDC  field source)</description>
        <label>Provider ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Information_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Information Summary</label>
        <referenceTo>Contact_Validation_Summary__c</referenceTo>
        <relationshipLabel>Provider Validation Updates</relationshipLabel>
        <relationshipName>Provider_Validation_Updates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provider_NPI__c</fullName>
        <label>Provider NPI</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Name_Suffix__c</fullName>
        <label>Provider Name Suffix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Service_Status__c</fullName>
        <description>Provider Service Status created as part of REQ 3665</description>
        <label>Provider Service Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Resigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Title__c</fullName>
        <label>Provider Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <label>Provider Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Publications__c</fullName>
        <label>Publications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residency__c</fullName>
        <label>Residency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resigned_From_Sutter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate provider resigned status</description>
        <label>Resigned From Sutter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retired_Departed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate provider retired status</description>
        <label>Retired/Departed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secure_Address_Line_2__c</fullName>
        <label>Secure Address Line_2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secure_City__c</fullName>
        <description>Provider&apos;s contact information for clinical patient information.</description>
        <label>Secure City</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secure_County__c</fullName>
        <label>Secure_County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secure_Fax__c</fullName>
        <description>Provider&apos;s contact information for clinical patient information.</description>
        <label>Secure Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secure_Floor__c</fullName>
        <label>Secure Floor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secure_Phone_Ext__c</fullName>
        <label>Secure Phone Ext</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secure_Phone__c</fullName>
        <description>Provider&apos;s contact information for clinical patient information.</description>
        <label>Secure Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secure_State__c</fullName>
        <description>Provider&apos;s contact information for clinical patient information.</description>
        <label>Secure State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secure_Street_Address__c</fullName>
        <description>Provider&apos;s contact information for clinical patient information.</description>
        <label>Secure Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secure_Suite__c</fullName>
        <label>Secure Suite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secure_Zip_Code__c</fullName>
        <description>Provider&apos;s contact information for clinical patient information.</description>
        <label>Secure Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_to_MDM__c</fullName>
        <description>Indicates that record has been picked up and sent to MDM.</description>
        <label>Sent to MDM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speciality__c</fullName>
        <label>Speciality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spoken_Languages__c</fullName>
        <label>Spoken Languages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Case_Contact_Name__c</fullName>
        <description>used to store customer inquiry contact name.</description>
        <label>Case Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Provider_Service_Status__c</fullName>
        <formula>IF( Retired_Departed__c == true, &apos;Retired&apos;, 
   IF( Practicing_Physician__c == true , &apos;Active&apos;,
     IF( Resigned_From_Sutter__c == true, &apos;Inactive&apos;, &apos;&apos;)))</formula>
        <label>Tech_Provider Service Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Success_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech_Success_Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website_Address__c</fullName>
        <label>Website Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Provider Validation Update</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Provider_ID__c</columns>
        <columns>Email__c</columns>
        <columns>First_Name__c</columns>
        <columns>Middle_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Sent_to_MDM__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Validation-{0}</displayFormat>
        <label>Provider Validation Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Validation Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>